--- a/swig/CMakeLists.txt
+++ b/swig/CMakeLists.txt
@@ -22,6 +22,10 @@ find_package(
   REQUIRED)
 message(
   STATUS
+    "Python3_INCLUDE_DIRS: ${Python3_INCLUDE_DIRS}; Python3_LIBRARIES: ${Python3_LIBRARIES}"
+)
+message(
+  STATUS
     "Found numpy ${Python3_NumPy_VERSION} include dir ${Python3_NumPy_INCLUDE_DIRS}"
 )
 set(AMICI_INTERFACE_LIST
@@ -112,7 +116,7 @@ set_target_properties(
 # NOTE: No public definitions of any dependency are forwarded to swig, they are
 # only used for compiling the swig-generated source file. Any definition that
 # are relevant for swig-code generation, need to be forwarded manually.
-target_link_libraries(_amici amici Python3::Python)
+target_link_libraries(_amici amici Python3::Module)
 if(WIN32)
   add_custom_command(
     TARGET _amici
