--- a/python/sdist/MANIFEST.in
+++ b/python/sdist/MANIFEST.in
@@ -7,10 +7,10 @@ recursive-include amici/_installation/src *
 recursive-include amici/_installation/swig *
 recursive-include amici/exporters/sundials/templates *
 include amici/*
-include version.txt
-include LICENSE.md
+include amici/_installation/version.txt
 exclude amici/_installation/*.so
 exclude amici/_installation/*.dll
+include LICENSE.md
 prune **/build
 prune **/install
 prune amici/_installation/share
